Support for JDK11 build.